PFC/Yocto_Infor/yocto_TXT/output_2790.txt
* [yocto] [meta-gplv2]grub-0.97 configure failed in x86
@ 2021-09-30  2:22 Zang, Ruochen/臧 若尘
  0 siblings, 0 replies; only message in thread
From: Zang, Ruochen/臧 若尘 @ 2021-09-30  2:22 UTC (permalink / raw)
  To: yocto; +Cc: ross.burton, peter.kjellerstedt, Richard Purdie

Hello!
When I compiled grub-0.97 of meta-gplv2 on X86, I failed in the do_configure phase. Can you help me solve this problem? Thank you.
Cheers,
Zang Ruochen

| checking whether i686-poky-linux-objcopy works for absolute addresses... configure: error: i686-poky-linux-gcc  -m32 -march=core2 -mtune=core2 -msse3 -mfpmath=sse  -Wdate-time --sysroot=/ubinux-dev/ubinux001/contribution/build_x86/tmp/work/core2-32-poky-linux/grub/0.97-r6/recipe-sysroot cannot link at address 2000
| ERROR: configure failed

tmp/work/core2-32-poky-linux/grub/0.97-r6/build/config.log:
configure:5466: i686-poky-linux-gcc  -m32 -march=core2 -mtune=core2 -msse3 -mfpmath=sse  -Wdate-time --sysroot=/ubinux-dev/ubinux001/contribution/build_x86/tmp/work/core2-32-poky-linux/grub/0.97-r6/recipe-sysroot  -O2 -pipe -g -feliminate-unused-debug-types -fmacro-prefix-map=/ubinux-dev/ubinux001/contribution/build_x86/tmp/work/core2-32-poky-linux/grub/0.97-r6=/usr/src/debug/grub/0.97-r6                      -fdebug-prefix-map=/ubinux-dev/ubinux001/contribution/build_x86/tmp/work/core2-32-poky-linux/grub/0.97-r6=/usr/src/debug/grub/0.97-r6                      -fdebug-prefix-map=/ubinux-dev/ubinux001/contribution/build_x86/tmp/work/core2-32-poky-linux/grub/0.97-r6/recipe-sysroot=                      -fdebug-prefix-map=/ubinux-dev/ubinux001/contribution/build_x86/tmp/work/core2-32-poky-linux/grub/0.97-r6/recipe-sysroot-native=  -nostdlib -Wl,-N -Wl,-Ttext -Wl,2000 conftest.o -o conftest.exec
/ubinux-dev/ubinux001/contribution/build_x86/tmp/work/core2-32-poky-linux/grub/0.97-r6/recipe-sysroot-native/usr/bin/i686-poky-linux/../../libexec/i686-poky-linux/gcc/i686-poky-linux/11.2.0/ld: warning: cannot find entry symbol _start; defaulting to 0000000000002000
/ubinux-dev/ubinux001/contribution/build_x86/tmp/work/core2-32-poky-linux/grub/0.97-r6/recipe-sysroot-native/usr/bin/i686-poky-linux/../../libexec/i686-poky-linux/gcc/i686-poky-linux/11.2.0/ld: conftest.exec: error: PHDR segment not covered by LOAD segment
collect2: error: ld returned 1 exit status
configure:5469: $? = 1
configure:5472: error: i686-poky-linux-gcc  -m32 -march=core2 -mtune=core2 -msse3 -mfpmath=sse  -Wdate-time --sysroot=/ubinux-dev/ubinux001/contribution/build_x86/tmp/work/core2-32-poky-linux/grub/0.97-r6/recipe-sysroot cannot link at address 2000

^ permalink raw reply	[flat|nested] only message in thread
only message in thread, other threads:[~2021-09-30  2:22 UTC | newest]

Thread overview: (only message) (download: mbox.gz / follow: Atom feed)
-- links below jump to the message on this page --
2021-09-30  2:22 [yocto] [meta-gplv2]grub-0.97 configure failed in x86 Zang, Ruochen/臧 若尘

